--- a/src/styles.sass
+++ b/src/styles.sass
@@ -42,7 +42,6 @@ input[type=number], select
     display: inline-block
     padding: .7em .8em
     vertical-align: middle
-    font-size: 0.8rem
     &:disabled
       background-color: darken($rose, 1%)
 
